Commenting out PauliOperator type from spec
The text will remain until we agree that this datatype is not needed.

--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -9,8 +9,8 @@ The \qcor specification has a set of datatypes that enable the expression of qua
 \subsection{\textbf{Observable}}\label{subsec:Observable}
 \DATATYPENAME{Observable} is an operator built from the basic operators, PauliOperator and FieldOperator. It contains the data to algebraically relate basic and complex operations, and the measurements from the observation of the kernel execution.\\
 
-\subsection{\textbf{PauliOperator}}\label{subsec:PauliOperator}
-\DATATYPENAME{PauliOperator} is a single operator type with three attributes: PauliX, PauliY or PauliZ, site/spatial index which is an integer value, coefficient float value.\\
+%\subsection{\textbf{PauliOperator}}\label{subsec:PauliOperator}
+%\DATATYPENAME{PauliOperator} is a single operator type with three attributes: PauliX, PauliY or PauliZ, site/spatial index which is an %integer value, coefficient float value.\\
 
 \subsection{\textbf{FieldOperator}}\label{subsec:FieldOperator}
 \DATATYPENAME{FieldOperator} is a single operator type with four attributes: creator or anihilator, exchangeStatistics, site/spatial index which is an integer value, coefficient float value.\\
