--- a/content/createPauli.tex
+++ b/content/createPauli.tex
@@ -5,11 +5,11 @@
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    Observable createPauli(SiteMap sitemap, int coef, char* paulistr)
+    Observable createPauli(SiteMap sitemap, double complex coef, char* paulistr)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    Observable qcor::createPauli(std::map<int,string> sitemap, int coef, string paulistr)
+    Observable qcor::createPauli(std::map<int,string> sitemap, std::complex coef, string paulistr)
 \end{Cppsynopsis}
 
 
