updated to include addOperation for FieldOperator types

--- a/content/addOperation.tex
+++ b/content/addOperation.tex
@@ -6,28 +6,30 @@
 
 \begin{Csynopsis}
     Obervable* addOperation(Observable* op1, Observable* op2)
+    FieldOperator* addOperation(FieldOperator* op1, FieldOperator* op2)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
     Obervable* qcor::addOperation(Observable &op1, Observable &op2)
+    FieldOperator* qcor::addOperation(FieldOperator &op1, FieldOperator &op2)
 \end{Cppsynopsis}
 
 
 \begin{apiarguments}
-    \apiargument{IN}{op1}{oberservable operand}
-    \apiargument{IN}{op2}{oberservable operand}
+    \apiargument{IN}{op1}{left operand}
+    \apiargument{IN}{op2}{right operand}
 \end{apiarguments}
 
 \apidescription{
-        The \FUNC{addOperation} routine adds the observables op1 and op2.
+        The \FUNC{addOperation} routine adds op1 and op2.
 }
 
 \apireturnvalues{
-    Returns an obersvable that is the addition of op1 and op2.
+    Returns the addition of op1 and op2.
 }      
 
 \apinotes{
-    
+    The operand datatypes must be the same and are preserved during the add operation to return the same datatype as the operand.
 }
 
 \begin{apiexamples}
