minor format update

--- a/content/addOperation.tex
+++ b/content/addOperation.tex
@@ -21,11 +21,11 @@
 \end{apiarguments}
 
 \apidescription{
-        The \FUNC{addOperation} routine adds op1 and op2.
+        The \FUNC{addOperation} routine adds \VAR{op1} and \VAR{op2}.
 }
 
 \apireturnvalues{
-    Returns the addition of op1 and op2.
+    Returns the addition of \VAR{op1} and \VAR{op2}.
 }      
 
 \apinotes{
