adding createFieldOp section

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -77,6 +77,9 @@
 \subsubsection{\textbf{pauliZ}}\label{subsec:pauliz}
 \input{content/pauliZ}
 
+\subsubsection{\textbf{createFieldOp}}\label{subsec:createfieldop}
+\input{content/createfieldop}
+
 
 \subsection{Algebraic Routines}
 \subsubsection{\textbf{addOperation}}\label{subsec:addop}
