minor syntax correction

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -78,7 +78,7 @@
 \input{content/pauliZ}
 
 \subsubsection{\textbf{createFieldOp}}\label{subsec:createfieldop}
-\input{content/createfieldop}
+\input{content/createFieldOp}
 
 
 \subsection{Algebraic Routines}
