--- a/content/execute.tex
+++ b/content/execute.tex
@@ -19,6 +19,10 @@
 
 \apidescription{
     This re-executes the quantum kernel associated after a taskInitiate and sync have already been called.  This requires a subsequent sync call to get results of a re-execution.  
+    %SP 8/4/2020: I'm confused by this descption.  
+    % 'the quantum kernel associated' - with what?
+    % why re-execute?
+    % what does it return? nothing?
 }
 
 \apireturnvalues{
