--- a/content/createFieldOp.tex
+++ b/content/createFieldOp.tex
@@ -16,6 +16,7 @@
 \begin{apiarguments}
     \apiargument{IN}{opType}{a string that designates if the field operator is a creation or annihilation operator}
     \apiargument{IN}{relType}{a string that designates if the commutation relations; the relations are either Fermionic or Bosonic}
+    %SP 8/4/2020: needs rewording
     \apiargument{IN}{siteIdx}{integer site index}
     \apiargument{IN}{coef}{complex coefficient value}
 \end{apiarguments}
