--- a/content/pauliX.tex
+++ b/content/pauliX.tex
@@ -35,7 +35,7 @@
     { This is a simple program that calls \FUNC{pauliX}: } 
     { example_code/pauliX_ex.cpp} 
     {}
-
+%SP 8/4/2020: I don't see the example
 \end{apiexamples}
 
 \end{apidefinition}
