--- a/content/taskInitiate.tex
+++ b/content/taskInitiate.tex
@@ -15,19 +15,19 @@ Handle qcore::taskInitiate(Observable *observable, Kernel *kernel, Objective *ob
 
 
 \begin{apiarguments}
-    \apiargument{IN}{observable}{A rule that defines the basis for the measurement after the kernel has been executed on the quantum hardware}
-    %SP 8/4/2020: a rule? under datatypes we say it is an operator.  
+    \apiargument{IN}{observable}{A Hermitian operator to be evaluated. Also provides rule defining the measurement bases to be rotated into after main body of kernel has been executed on the quantum hardware}
+    %SP 8/4/2020: a rule? under datatypes we say it is an operator.  EZJ fixed. 
     \apiargument{IN}{kernel}{The quantum kernel to be executed as part of the objective function evaluation}
      % dosn't the ObjectiveFunction already contain the observable and kernels? See datatypes.tex
     \apiargument{IN}{objective}{A parameterized user defined function transforming input data into an output result}
-    %SP 8/4/2020: how is this different from objectiveFunction?  the description is basically saying it is an objective function.  This has often confused me.
+    %SP 8/4/2020: how is this different from objectiveFunction?  the description is basically saying it is an objective function.  This has often confused me. EZJ ditto. 
     \apiargument{IN}{optimizer}{Takes an objective function as input and outputs the optimal function parameters and associated function value}
     \apiargument{IN}{parameters}{Vector of kernel parameters}
     \apiargument{OUT}{handle}{}
 \end{apiarguments}
 
 \apidescription{
-The taskInitiate call is invoked on the host to launch a quantum kernel on the quantum device. The taskInitiate call references the observable data structure, the initial quantum state, the objective function, and the classical optimizer. After a quantum kernel has been launched, host execution continues until the host reaches a sync call.  
+The taskInitiate call is invoked on the host to launch a quantum kernel on the quantum device. The taskInitiate call references the observable data structure, the objective function, and the classical optimizer. After a quantum kernel has been launched, host execution continues until the host reaches a sync call.  
 %SP 8/4/2020: again here we are saying it references the objective function, but above the argument is 'objective'  
 }
 
@@ -36,9 +36,10 @@ The taskInitiate call is invoked on the host to launch a quantum kernel on the q
 }      
 
 \apinotes{
-Although from a high level of abstraction, the kernel executes on the quantum
-device, with variational quantum computing, the underlying implementation may iterate         
-execution between the quantum and %SP 8/4/2020: suggest 'classical host'
+The taskInitiate call kicks off a hybrid quantum-classical task. For example, 
+in variational quantum computing the kernel executes on the quantum 
+device and the implementation may iterate         
+execution between the quantum and classical
 host devices, with the host performing classical optimization based on 
 measurements from the quantum device.   
 }
