--- a/content/execute.tex
+++ b/content/execute.tex
@@ -18,7 +18,7 @@
 \end{apiarguments}
 
 \apidescription{
-    This re-executes the quantum kernel associated after a taskInitiate and sync have already been called.  This requires a subsequent sync call to get results of a re-execution.  
+    This re-executes the quantum kernel associated from a previous taskInitiate and sync which have already been called. Requires a subsequent sync call to retrieve results of re-execution.  
     %SP 8/4/2020: I'm confused by this descption.  
     % 'the quantum kernel associated' - with what?
     % why re-execute?
