--- a/content/createobserv.tex
+++ b/content/createobserv.tex
@@ -27,7 +27,8 @@
 }      
 
 \apinotes{
-    
+    %EZJ: Does one need to createobserve(fieldOp) and then use observableTransform(fieldOp) to populate the observable with data?
+    %i.e. we need to specify and deliniate the relationship between createobserve and observableTransform. 
 }
 
 \begin{apiexamples}
