--- a/content/createPauli.tex
+++ b/content/createPauli.tex
@@ -22,9 +22,10 @@
 \end{apiarguments}
 
 \apidescription{
-        \FUNC{createPauli} accepts a string representation of a complex Pauli operator, \VAR{paulistr}, or an integer:string mapping, \VAR{sitemap}, of an integer site number to a string ``x'', ``y'', or ``z''. The integer \VAR{coef} argument can optionally be included with \VAR{sitemap} to multiply each term in the site map. If \VAR{coef} is not included, the default value is 1. If \VAR{paulistr} is provided, the expected form of the string is ``<coefficient> <pauli string> <integer> ... <optional operation>''. If both \VAR{paulistr} and \VAR{sitemap} are provided, \VAR{paulistr} is ignored and \VAR{sitemap} is used to produce the Pauli observable. If neither \VAR{paulistr} or \VAR{sitemap} are provided, the identy map is used to create the Pauli observable.
+        \FUNC{createPauli} accepts a string representation of a complex Pauli operator, \VAR{paulistr}, or an integer:string mapping, \VAR{sitemap}, of an integer site number to a string ``x'', ``y'', or ``z''. The complex coefficient \VAR{coef} argument can optionally be included with \VAR{sitemap} to multiply each term in the site map. If \VAR{coef} is not included, the default value is 1. If \VAR{paulistr} is provided, the expected form of the string is ``<coefficient> <pauli string> <integer> ... <optional operation>''. If both \VAR{paulistr} and \VAR{sitemap} are provided, \VAR{paulistr} is ignored and \VAR{sitemap} is used to produce the Pauli observable. If neither \VAR{paulistr} or \VAR{sitemap} are provided, the identy map is used to create the Pauli observable.
         %SP 8/4/2020: formatting not coming through in pdf
         %SP 8/4/2020: An example would help clear things up
+        %EZJ: good option to create Identity. How does one create a null pauli. E.g. 0*'X' with zero coeff? Would be nice to have a simpler, more fundamental null type. 
 }
 
 \apireturnvalues{
