--- a/content/createPauli.tex
+++ b/content/createPauli.tex
@@ -26,6 +26,9 @@
         %SP 8/4/2020: formatting not coming through in pdf
         %SP 8/4/2020: An example would help clear things up
         %EZJ: good option to create Identity. How does one create a null pauli. E.g. 0*'X' with zero coeff? Would be nice to have a simpler, more fundamental null type. 
+        %EZJ: Need help distinguishing between the uses of createObserve, createPauli, and pauliX(Y,Z). To make a generic observable should one:
+        %     a) feed a pauli X,Y,Z to createObserve?
+        %     b) createPauli (with the requisite inputs)?
 }
 
 \apireturnvalues{
