--- a/content/createFieldOp.tex
+++ b/content/createFieldOp.tex
@@ -1,5 +1,5 @@
 \apisummary{
-    creates a Boson or Fermion feild operator
+    creates a Bosonic or Fermionic field operator
 }
 
 \begin{apidefinition}
@@ -15,14 +15,14 @@
 
 \begin{apiarguments}
     \apiargument{IN}{opType}{a string that designates if the field operator is a creation or annihilation operator}
-    \apiargument{IN}{relType}{a string that designates if the commutation relations; the relations are either Fermionic or Bosonic}
-    %SP 8/4/2020: needs rewording
+    \apiargument{IN}{relType}{a string that designates if the commutation relations are either Fermionic or Bosonic}
     \apiargument{IN}{siteIdx}{integer site index}
     \apiargument{IN}{coef}{complex coefficient value}
 \end{apiarguments}
 
 \apidescription{
-        \FUNC{createFieldOp} creates a creation or annihilation field operator that is either Fermionic or Bosonic. The creation or annihilation atrribute is set by assigning the string value ``create'' or ``annihilate'', respectively, to \VAR{opType}.  The Fermionic or Bosonic attribute is set by assigning the string value ``Fermion'' or ``Boson'', respectively, to \VAR{relType}. \FUNC{createFieldOp} must also assign an integer site index via \VAR{sizeIdx}. The complex coefficient \VAR{coef} is optional, and is 1 by default.
+        \FUNC{createFieldOp} creates a creation or annihilation field operator that is either Fermionic or Bosonic. The creation or annihilation atrribute is set by assigning the string value ``create'' or ``annihilate'', respectively, to \VAR{opType}.  The Fermionic or Bosonic attribute is set by assigning the string value ``Fermion'' or ``Boson'', respectively, to \VAR{relType}. \FUNC{createFieldOp} must also assign an integer site index via \VAR{sizeIdx}. The complex coefficient \VAR{coef} is optional, and is 1 by default. 
+}
 
 \apireturnvalues{
     Returns a pointer to a single instance of \DATATYPENAME{FieldOperator}.
