--- a/content/multiplyOperation.tex
+++ b/content/multiplyOperation.tex
@@ -1,5 +1,5 @@
 \apisummary{
-     
+     Takes a pair of Observables (or FieldOperators) and retrurns their product. 
 }
 
 \begin{apidefinition}
@@ -26,6 +26,7 @@
 
 \apireturnvalues{
      Returns the multiplication of \VAR{op1} and \VAR{op2}.
+     % again, new output or updates one of the inputs?
 }      
 
 \apinotes{
