--- a/main_spec.tex
+++ b/main_spec.tex
@@ -88,8 +88,9 @@
 \subsubsection{\textbf{multiplyOperation}}\label{subsec:mulop}
 \input{content/multiplyOperation}
 
-\subsubsection{\textbf{mergeOperation}}\label{subsec:mergeop}
-\input{content/mergeOperation}
+% \subsubsection{\textbf{mergeOperation}}\label{subsec:mergeop}
+% \input{content/mergeOperation}
+% mergeOperation does not appear in the contents, nor do we (EZJ) remember what it would do/did. 
 
 
 \clearpage
