--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -30,3 +30,5 @@ and the measurements from the observation of the kernel execution.\\
 %SP 8/4/2020: what is a plane?
 \DATATYPENAME{SiteMap} has an integer, \VAR{site_idx}, and string, \VAR{plane}, attribute. These attributes form a mapping of \VAR{site_idx} to \VAR{plane} for use in \Clang.
 
+\subsection{\textbf{OperatorTransform}}\label{subsec:OperatorTransform}
+\DATATYPENAME{OperatorTransform} A function mapping an (variatic number of) input Operator(s) to a transformed output (list of) Operator(s). 
