updated transform to operatortransform
in both the did it in both the main spec and in content

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -54,8 +54,8 @@
 \subsection{\textbf{execute}}\label{subsec:execute}
 \input{content/execute}
 
-\subsection{\textbf{transform}}\label{subsec:transform}
-\input{content/transform}
+\subsection{\textbf{transform}}\label{subsec:operatortransform}
+\input{content/operatortransform}
 
 
 \subsection{Memory Management Routines}
