Update and rename transform.tex to operatortransform.tex

--- a/content/operatortransform.tex
+++ b/content/operatortransform.tex
@@ -1,5 +1,5 @@
 \apisummary{
-    Method transforming FieldOperators to a observable.
+    Abstraction which models general transformations on operators. 
 }
 
 \begin{apidefinition}
@@ -32,7 +32,7 @@ Observable observableTransform(map<FieldOperator, FieldOperator> fieldOp, void* 
 }      
 
 \apinotes{
-    
+    e.g. transform fermionic Operators to a pauli Operator.
 }
 
 \begin{apiexamples}
