made c sitemap a pointer in header

--- a/content/createPauli.tex
+++ b/content/createPauli.tex
@@ -5,7 +5,7 @@
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    Observable createPauli(SiteMap sitemap, double complex coef, char* paulistr)
+    Observable createPauli(SiteMap *sitemap, double complex coef, char* paulistr)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
