removing FieldOperator as a type

--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -22,8 +22,8 @@ and the measurements from the observation of the kernel execution.\\
 %\subsection{\textbf{PauliOperator}}\label{subsec:PauliOperator}
 %\DATATYPENAME{PauliOperator} is a single operator type with three attributes: PauliX, PauliY or PauliZ, site/spatial index which is an %integer value, coefficient float value.\\
 
-\subsection{\textbf{FieldOperator}}\label{subsec:FieldOperator}
-\DATATYPENAME{FieldOperator} is a single operator type with four attributes: creator or anihilator, exchangeStatistics, site/spatial index (which is an integer value), and a multiplicative complex scalar coefficient.\\
+%\subsection{\textbf{FieldOperator}}\label{subsec:FieldOperator}
+%\DATATYPENAME{FieldOperator} is a single operator type with four attributes: creator or anihilator, exchangeStatistics, site/spatial index %(which is an integer value), and a multiplicative complex scalar coefficient.\\
 
 \subsection{\textbf{SiteMap}}\label{subsec:Sitemap}
 % is this a mapping between a coodinate system (given a dimensionality) and indicies for the lattice sites? 
