--- a/content/addOperation.tex
+++ b/content/addOperation.tex
@@ -1,36 +1,34 @@
 \apisummary{
-   Takes a pair of Observables (or FieldOperators) and returns their sum. 
+   Takes Observables and returns their sum. 
 }
 
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    Obervable* addOperation(Observable* op1, Observable* op2)
-    FieldOperator* addOperation(FieldOperator* op1, FieldOperator* op2)
+    Obervable* addOperation(Observable* op1, Observable* op2, ...)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    Obervable* qcor::addOperation(Observable &op1, Observable &op2)
-    FieldOperator* qcor::addOperation(FieldOperator &op1, FieldOperator &op2)
+    Obervable* qcor::addOperation(Observable &op1, Observable &op2, ...)
 \end{Cppsynopsis}
 
 
 \begin{apiarguments}
-    \apiargument{IN}{op1}{left operand}
-    \apiargument{IN}{op2}{right operand}
+    \apiargument{IN}{op1}{first Observable operand}
+    \apiargument{IN}{op2}{second Observable operand}
+    \apiargument{IN}{...}{additional Observable operand}
 \end{apiarguments}
 
 \apidescription{
-        The \FUNC{addOperation} routine adds \VAR{op1} and \VAR{op2}.
+        The \FUNC{addOperation} routine adds two or more \DATATYPENAME{Observables}.
 }
 
 \apireturnvalues{
-    Returns the addition of \VAR{op1} and \VAR{op2}.
-    % EZJ: is the returned obs a NEW obs, or are op1 or op2 updated?
+    Returns a new instance of \DATATYPENAME{Observable}.
 }      
 
 \apinotes{
-    The operand datatypes must be the same and are preserved during the add operation to return the same datatype as the operand. Note, this allows the addition of distinct types of Field operators, but Observables cannot be mixed with other operator types.
+    
 }
 
 \begin{apiexamples}
