--- a/content/addOperation.tex
+++ b/content/addOperation.tex
@@ -16,7 +16,7 @@
 \begin{apiarguments}
     \apiargument{IN}{op1}{first Observable operand}
     \apiargument{IN}{op2}{second Observable operand}
-    \apiargument{IN}{...}{additional Observable operand}
+    \apiargument{IN}{...}{additional Observable operands}
 \end{apiarguments}
 
 \apidescription{
