ensuring space after \clang, \celev and \python

--- a/utils/defs.tex
+++ b/utils/defs.tex
@@ -35,10 +35,10 @@
 \newcommand{\CONST}[1]{\textit{#1}}
 \newcommand{\const}[1]{\protect\gb\protect{\textsf{\small #1}}\index{CONST:#1}}
 \newcommand{\CorCpp}{\textit{C/C++}\xspace}
-\newcommand{\Python}{\textit{Python}}
-\newcommand{\Clang}{\textit{C}}
+\newcommand{\Python}{\textit{Python}\xspace}
+\newcommand{\Clang}{\textit{C}\xspace}
 \newcommand{\Cpp}{\textit{C++}\xspace}
-\newcommand{\Celev}{\textit{C11}}
+\newcommand{\Celev}{\textit{C11}\xspace}
 \newcommand{\TYPE}{\emph{TYPE}}
 \newcommand{\TYPENAME}{\emph{TYPE}}
 \newcommand{\ColHead}[1]{\textbf{#1}}
