changing Observable to Operator

--- a/content/addInPlaceOperation.tex
+++ b/content/addInPlaceOperation.tex
@@ -1,21 +1,21 @@
 \apisummary{
-    Adds a pair of Observables.
+    Adds a pair of Operators.
 }
 
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    void addOperation(Observable* op1, Observable* op2)
+    void addOperation(Operator* op1, Operator* op2)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    void qcor::addOperation(Observable &op1, Observable &op2)
+    void qcor::addOperation(Operator &op1, Operator &op2)
 \end{Cppsynopsis}
 
 
 \begin{apiarguments}
-    \apiargument{IN/OUT}{op1}{left Observable operand}
-    \apiargument{IN}{op2}{right Observable operand}
+    \apiargument{IN/OUT}{op1}{left Operator}
+    \apiargument{IN}{op2}{right Operator}
 \end{apiarguments}
 
 \apidescription{
