--- a/content/addOperation.tex
+++ b/content/addOperation.tex
@@ -1,30 +1,30 @@
 \apisummary{
-   Takes Observables and returns their sum. 
+   Takes Operators and returns their sum. 
 }
 
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    Obervable* addOperation(Observable* op1, Observable* op2, ...)
+    Operator* addOperation(Operator* op1, Operator* op2, ...)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    Obervable* qcor::addOperation(Observable &op1, Observable &op2, ...)
+    Operator* qcor::addOperation(Operator &op1, Operator &op2, ...)
 \end{Cppsynopsis}
 
 
 \begin{apiarguments}
-    \apiargument{IN}{op1}{first Observable operand}
-    \apiargument{IN}{op2}{second Observable operand}
-    \apiargument{IN}{...}{additional Observable operands}
+    \apiargument{IN}{op1}{first Operator}
+    \apiargument{IN}{op2}{second Operator}
+    \apiargument{IN}{...}{additional Operators}
 \end{apiarguments}
 
 \apidescription{
-        The \FUNC{addOperation} routine adds two or more \DATATYPENAME{Observables}.
+        The \FUNC{addOperation} routine adds two or more \DATATYPENAME{Operators}.
 }
 
 \apireturnvalues{
-    Returns a new instance of \DATATYPENAME{Observable}.
+    Returns a new instance of \DATATYPENAME{Operator}.
 }      
 
 \apinotes{
